cabal-version:      2.4
name:               heft
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jaro Reinders
maintainer:         jaro.reinders@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Heft.AST, Heft.Interpreter, Heft.Parser
    hs-source-dirs:   src
    build-depends:    base >=4.14 && <5, uu-parsinglib, ListLike
    default-language: Haskell2010
    ghc-options:      -Wall

executable heft
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, heft, uu-parsinglib, ListLike
    hs-source-dirs:   app
    default-language: Haskell2010
