cabal-version:      2.4
name:               heft
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Programming with Higher order EFfecTs!

-- A longer description of the package.
-- description:

homepage:    https://github.com/heft-lang/heft#readme
bug-reports: https://github.com/heft-lang/heft/issues

-- The license under which the package is released.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jaro Reinders
maintainer:         jaro.reinders@gmail.com

copyright:          2022 Heft-lang Team
category:           Language, Effect
tested-with:        
    GHC == 8.10.7
extra-source-files: 
    CHANGELOG.md
    README.md

library
    exposed-modules:  Heft.Repl , Heft.Syntax.Expr, Heft.Syntax.Misc, Heft.Syntax.Type, Heft.Interpreter, Heft.Parser, Heft.Util
    hs-source-dirs:   src
    build-depends:    ListLike, base >=4.14 && <5, containers >= 0.6.5.1, directory >= 1.3.6.0, filepath >= 1.4.2.1, haskeline >= 0.8.2, mtl >= 2.2.2, pretty-terminal >= 0.1.0.0, process >= 1.6.13.2, repline >= 0.4, text >= 1.2.4.1, uu-parsinglib
    default-language: Haskell2010
    ghc-options:      -Wall

executable heft
    main-is:          Main.hs
    build-depends:    ListLike, base >=4.14 && <5, containers >= 0.6.5.1, directory >= 1.3.6.0, filepath >= 1.4.2.1, haskeline >= 0.8.2, heft, mtl >= 2.2.2, pretty-terminal >= 0.1.0.0, process >= 1.6.13.2, repline >= 0.4, text >= 1.2.4.1, uu-parsinglib >= 2.9.2
    hs-source-dirs:   app
    default-language: Haskell2010
